--- a/_config.yml
+++ b/_config.yml
@@ -23,13 +23,13 @@ timezone: Asia/Kuala_Lumpur
 
 title: Farith Adnan                          # the main title
 
-tagline: Software Engineer  # it will display as the sub-title
+tagline: Software Developer  # it will display as the sub-title
 
 description: >-                        # used by seo meta and the atom feed
-  A minimal, responsive, and powerful Jekyll theme for presenting professional writing.
+  A minimal, responsive tech blog created by a software developer for presenting knowledge and experiences.
 
 # fill in the protocol & hostname for your site, e.g., 'https://username.github.io'
-url: 'https://farithadnan.github.io'
+url: 'https://blog.farithadnan.net/'
 
 github:
   username: farithadnan            # change to your github username
@@ -48,7 +48,7 @@ social:
     - https://github.com/farithadnan       # change to your github homepage
     # Uncomment below to add more social links
     # - https://www.facebook.com/username
-    # - https://www.linkedin.com/in/username
+    - https://www.linkedin.com/in/farith-syariffudin
 
 google_site_verification:               # fill in to your verification string
 
