Update post, author

--- a/_data/author.yml
+++ b/_data/author.yml
@@ -1,5 +1,5 @@
-<author-1>: 
+Farith: 
   name: Farith Adnan
   github: farithadnan
   email: dev@farithadnan.net
-  url: https://blog.farithadnan.net/
+  url: https://github.com/farithadnan/
