--- a/_data/author.yml
+++ b/_data/author.yml
@@ -1,5 +1,3 @@
-Farith: 
+farith: 
   name: Farith Adnan
-  github: farithadnan
-  email: dev@farithadnan.net
   url: https://github.com/farithadnan/
