--- a/_config.yml
+++ b/_config.yml
@@ -80,10 +80,10 @@ theme_mode:   # [light|dark]
 # will be added to all image (site avatar & posts' images) paths starting with '/'
 #
 # e.g. 'https://cdn.com'
-img_cdn:
+img_cdn: 'https://raw.githubusercontent.com/farithadnan/blog-images/main'
 
 # the avatar on sidebar, support local or CORS resources
-avatar: 'assets/img/avatar.jpeg'
+avatar: '/commons/avatar.jpeg'
 
 # boolean type, the global switch for ToC in posts.
 toc: true
